# apps/api/src/app.controller.ts
@@ -1,4 +1,6 @@
 import { Controller, Get } from '@nestjs/common';
+import { ApiTags } from '@nestjs/swagger';
+@ApiTags('health')
 @Controller()
 export class AppController {
   @Get('health') health() { return { ok: true }; }
